Progress on the parameters window, trying to make the size work